--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,10 +17,16 @@
     state: present
   become: yes
 
+- name: Get installed Visual Studio Code extensions
+  command: code --list-extensions
+  register: vscode_extenstions_installed
+  changed_when: no
+
 - name: Install Visual Studio Code extensions
   shell: code --install-extension {{ item }}
   with_items: "{{ vscode_extensions }}"
   register: vscode_install_extension
+  when: item not in vscode_extenstions_installed.stdout
   changed_when:
     - "'is already installed' not in vscode_install_extension.stdout"
     - "'was successfully installed' in vscode_install_extension.stdout"
