--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,5 @@
 galaxy_info:
+  role_name: vscode
   author: Jared Hocutt
   description: Adds the Visual Studio Code yum repository and installs Visual Studio Code.
 
@@ -10,3 +11,4 @@ galaxy_info:
   - name: Fedora
     versions:
     - 27
+    - 28
