--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,14 +1,26 @@
 galaxy_info:
   role_name: vscode
-  author: Jared Hocutt
-  description: Adds the Visual Studio Code yum repository and installs Visual Studio Code.
 
-  license: BSD
+  author: Jared Hocutt (@jaredhocutt)
+  description: >-
+    This role handles configuring the Visual Studio Code repository and then
+    install Visual Studio Code.
 
+  license: MIT
+
+  # Reason: yum_repository module
   min_ansible_version: 2.1
 
   platforms:
   - name: Fedora
     versions:
-    - 27
-    - 28
+    - all
+
+  galaxy_tags:
+    - vscode
+    - code
+    - visualstudio
+    - editor
+    - text
+
+dependencies: []
